@startuml
title UML Diagram\nDatabase
scale 1.4
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 10
skinparam nodesep 80
skinparam ranksep 80
skinparam monochrome true
skinparam backgroundColor white
skinparam defaultFontName Segoe UI, Arial, sans-serif
skinparam style strictuml





package "User Environment" #DDDDDD{

    enum RequestStatus {
        PENDING
        PROCESSING
        COMPLETED
        FAILED
    }
    enum OperationType {
        CASH
        CARD
        OTHER
    }

    entity "User" as user {
      *id : UUID <<PK>>
      --
      *username : varchar(150) <<UNIQUE>>
      *password : varchar(128)
      *email : varchar(254) <<UNIQUE>>
      credit : integer = 0
      is_staff = false
      is_superuser = false
      ...
    }

    entity "Operation" as operation{
        *id : UUID <<PK>>
        --
        *beneficiary_id : UUID <<FK>>
        *agent_id : UUID <<FK>>
        *operation_type : OperationType
        *amount : integer = 0
        comment : text
        created_at : DateTime
    }
    entity "File" as file{
        *id : UUID <<PK>>
        --
        *user_id : UUID <<FK>>
        *path : varchar(100)
        number_of_printing : integer = 1 {>= 0}
        para_slicer : jsonb
    }


    entity "Request" as request{
            *id : UUID <<PK>>
            --
            *file_id : UUID <<FK>>
            *printer_id : Bigint <<FK>>
            status : RequestStatus = PENDING
            created_at : DateTime
    }
}
package "Material Assets" #DDDDDD{
    entity "Printer" as printer {
            *id : Bigint <<PK>>
            --
            *model : PrinterModel
            *status : PrinterStatus = DOWN
    }

    entity "Filament" as filament{
        *id : Bigint <<PK>>
        --
        *colour : varchar(25)
        *type : FilamentType
        *price : integer = 0 {>= 0}
        quantity : integer = 0 {>= 0}
    }

    enum FilamentType {
        PLA
        REINFORCED_PLA
        PETG
        ABS
        TPE/TPU
    }

    enum PrinterModel {
        Creality_K1C
        Prusa MK3S
    }

    enum PrinterStatus {
        UP
        DOWN
        USED
    }
}




file }o-l- user : owns
file ||-r- request : linked to
"Material Assets" <--> "User Environment" : Interacts
printer ||-- request : processes
operation }o-- user : beneficiary or agent
request .d.> RequestStatus : uses
printer ..> PrinterStatus : uses
printer ..> PrinterModel : uses
filament ..> FilamentType : uses
operation .r.> OperationType : uses
@enduml